Added way to see whether an account is active or not

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -74,6 +74,9 @@
                     (delete)="removeDeletedUser(i)"
                     ></app-user-row>
                 </div>
+                
+                <div class="mt-3">(†): Deactivated/Deleted Account </div>
+
             </div>
         </div>
 
