Moved white separator into styles and introduced top1, a new class to move relatively positioned elements 1 pixel down

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -200,6 +200,15 @@ article{
 	width: 100%;
 }
 
+.white-separator{
+    background-color: white;
+    margin: 0 0 1rem 0;
+}
+
+.top1{
+    top: 1px;
+}
+
 h2{
     letter-spacing: 0.5rem;
 }
