--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,17 +8,16 @@
     <button 
     type="button"
     class="navbar-toggler" 
-    data-toggle="collapse" 
     data-target="#navbarSupportedContent" 
     aria-controls="navbarSupportedContent" 
     aria-expanded="false" 
     aria-label="Toggle navigation"
-    (click)="toggleCollapse()"
+    (click)="toggleCollapse($event)"
     >
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" [ngClass]="{'show': !collapsed}" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse animate__animated " [ngClass]="{'show animate__slideInLeft': !collapsed}" id="navbarSupportedContent">
         <!-- Search Bar -->
         <form class="my-2 flex-1" (submit)="search()">
             <div class="searchbar form-control">
@@ -27,6 +26,7 @@
                 class="search-input" 
                 type="search" 
                 name="search" 
+                title="search"
                 [(ngModel)]="searchString" 
                 placeholder="Search Articles..." 
                 aria-label="Search">
@@ -35,22 +35,16 @@
 
         <!-- Nav Items -->
         <ul class="navbar-nav" (click)="outsideClickSubject.next()">
-            <!-- Admin Section -->
-            <li class="nav-item" *ngIf="tokenService.isAdmin()">
-                <a routerLink="{{ routingService.getRoutePath('admin') }}" class="nav-link align-items-center">
-                    <span class="nav-link-text mr-3"> Admin </span>
-                    <i class="fa fa-lock fa-2x"></i>
-                </a>
-            </li>
             <!-- Recent Updates -->
-            <li class="nav-item">
+            <li class="nav-item" title="Recent Updates">
                 <a routerLink="{{ routingService.getRoutePath('recent-updates') }}" class="nav-link"> 
-                    <span class="nav-link-text">Recent Updates</span>
+                    <span class="nav-link-text mr-3">Recent Updates</span>
+                    <i class="fa fa-newspaper-o fa-2x" aria-hidden="true"></i>
                 </a>
             </li>
 
             <!-- Spells -->
-            <li class="nav-item">
+            <li class="nav-item" title="Spells">
                 <a routerLink="{{ routingService.getRoutePath('spells')}}" class="nav-link align-items-center">
                     <span class="nav-link-text mr-3">Spells</span> 
                     <i class="fa fa-bolt fa-2x" aria-hidden="true"></i>
@@ -58,7 +52,7 @@
             </li>
 
             <!-- Rules -->
-            <li class="nav-item">
+            <li class="nav-item" title="Rules">
                 <a routerLink="{{ routingService.getRoutePath('rules')}}" class="nav-link"> 
                     <span class="nav-link-text mr-3 d-none">Rules</span> 
                     <i class="fa fa-book fa-2x" aria-hidden="true"></i>
@@ -66,20 +60,56 @@
             </li>
 
             <!-- Session Audio -->
-            <li class="nav-item">
+            <li class="nav-item" title="Session Recordings">
                 <a class="nav-link" routerLink="{{ routingService.getRoutePath('sessionaudio-overview') }}"> 
                     <span class="nav-link-text mr-3 d-none">Session Audio</span> 
                     <i class="fa fa-file-audio-o fa-2x" aria-hidden="true"></i> 
                 </a>
             </li>
 
-            <!-- Log out -->
-            <li class="nav-item mr-5">
-                <a (click)="logout()" class="nav-link"> 
-                    <span class="nav-link-text mr-3 d-none">Logout</span> 
-                    <i class="fa fa-sign-out fa-2x" aria-hidden="true"></i> 
+            <!-- User Dropdown -->
+            <li class="dropdown" >
+                <!-- Navbar Button -->
+                <a 
+                title="User" 
+                class="nav-link dropdown-toggle" 
+                role="button" 
+                aria-expanded="false"
+                (click)="toggleDropDownCollapse($event)"
+                >
+                    <span class="nav-link-text mr-3 d-none">Your Account</span>
+                    <i class="fa fa-2x fa-user-circle"></i>
                 </a>
-            </li>
+
+                <!-- DropDown Items -->
+                <ul class="dropdown-menu" [ngClass]="{'show': !dropdownCollapsed}">
+                    <!-- Log out -->
+                    <li class="pointer">
+                        <a class="dropdown-item nav-link d-flex justify-content-center" (click)="logout()"> 
+                            <span class="nav-link-text mr-3">Logout</span> 
+                            <i class="fa fa-sign-out fa-2x" aria-hidden="true"></i> 
+                        </a>
+                    </li>
+
+                    <!-- Admin Section -->
+                    <li *ngIf="tokenService.isAdmin()">
+                        <a class="dropdown-item nav-link d-flex justify-content-center" routerLink="{{ routingService.getRoutePath('admin') }}" >
+                            <span class="nav-link-text mr-3"> Admin </span>
+                            <i class="fa fa-lock fa-2x"></i>
+                        </a>
+                    </li>
+
+                    <!-- Profile Section -->
+                    <li>
+                        <a class="dropdown-item nav-link d-flex justify-content-center" routerLink="{{ routingService.getRoutePath('profile', {username: tokenService.getCurrentUserName()})}}">
+                            <span class="nav-link-text mr-3"> Profile </span>
+                            <i class="fa fa-user-circle fa-2x"></i>
+                        </a>
+                    </li>
+                </ul>
+              </li>
+
+
 
         </ul>
 
