--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -47,6 +47,10 @@
     width: 100%;
 }
 
+.dropdown-menu{
+    left: -100px;
+}
+
 // Remove "blue x" from chrome searchbar styling
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
