Updated ToDo description

--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -14,8 +14,8 @@
                     <!-- Card Body -->
                     <!-- TODO: Fix the download button somehow 
                         Gained Intel so far:
-                        - You ideally want to NOT handle this in angular. Angular is prone to crashing. So download from file-url or a django view
-                        - If you download from django-view, it needs to be without login
+                        - You ideally want to NOT handle this in angular. Angular can deal with ~10Mb files, not 50+. So download from file-url or a django view
+                        - If you download from django-view, it needs to without login and somehow still authentication
                             Problem here: Getting this done with a url that isn't snatched by the angular router
                         - If you download from file-url, you would use the download attribute on an anchor tag
                             So far that just isn't working
