--- a/src/styles.scss
+++ b/src/styles.scss
@@ -431,9 +431,15 @@ div.ngb-dp-day .btn-light:hover{
 	color: black !important;
 }
 
+//FORMLY
 // Overwrite Formly warning message styling for better visibility
 formly-validation-message{
 	color: #ff8b7f;
+}
+
+//Overwrite Formly's form-group margin when it isn't desired
+formly-field.mb-0 .form-group{
+	margin-bottom: 0;
 }
 
 //Overwrite of Formly for SessionAudio Form
