Turned a button for object creation into a primary

--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -12,7 +12,7 @@
 
         <!-- Adding Item button -->
         <div class="mb-3 row" [ngClass]="{'d-none': !userHasCreatePermission()}">
-            <a class="btn btn-secondary col-lg-2 col-sm-3" routerLink="create"> 
+            <a class="btn btn-primary col-lg-2 col-sm-3" routerLink="create"> 
                 Add {{ capitalizeString(overviewType) }}
             </a>
         </div>
