Turned a submit button primary that should've been so from the get go.

--- a/src/app/components/utility/quotefield/quotefield.component.html
+++ b/src/app/components/utility/quotefield/quotefield.component.html
@@ -131,7 +131,7 @@
         <form [formGroup]="form">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <div class="btn btn-secondary mr-3" (click)="onCancel()">Cancel</div>
-            <div class="btn btn-secondary" (click)="onSubmit()">Submit</div>
+            <div class="btn btn-primary" (click)="onSubmit()">Submit</div>
         </form>
 
     </blockquote>
