--- a/src/app/components/articles/article-overview/article-overview.component.scss
+++ b/src/app/components/articles/article-overview/article-overview.component.scss
@@ -14,3 +14,18 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
     border-color: #ffffff;
     box-shadow: 0 0 0 2px #ffffff;
 }
+
+#player-characters {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+#player-characters img{
+    max-height: 7rem;
+    object-fit: cover;
+    transition: max-height 0.2s ease-in-out;
+}
+
+#player-characters img:hover{
+    max-height: 20rem;
+}
