--- a/src/app/components/utility/timestamp-list/timestamp-list.component.html
+++ b/src/app/components/utility/timestamp-list/timestamp-list.component.html
@@ -1,7 +1,7 @@
 <!-- Timestamps -->
 <div>
     <!-- Timestamp Create Form -->
-    <form [formGroup]="timestampForm" [ngClass]="{'d-none': !timestampCreateState, 'row mt-1 mb-4 ml-auto mw-85': timestampCreateState}">
+    <form [formGroup]="timestampForm" [ngClass]="{'d-none': !timestampCreateState, 'row mt-1 mb-4 ml-auto mw-85 animate__animated animate__flipInX': timestampCreateState}">
         <formly-form class="d-flex col-lg-10 col-10 px-0" [form]="timestampForm" [fields]="timestampFields" [model]="timestampModel"></formly-form>
         <div class="col-2 d-flex align-items-center px-0">
             <div class="d-flex mt-custom">
