--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -14,11 +14,10 @@
             (deleteRule) = onRuleDelete(i)
             ></app-rule>
         </div>
-        <!-- TODO: Hide creating rules and spells for anyone that isn't an admin -->
-        <!-- TODO: Create an admin center with a "delete All" button and a "download Database" button -->
+
         <!-- Insert new Rule -->
-        <div class="expand row justify-content-center">
-            <div class="btn btn-secondary" (click)="addRule()">
+        <div class="expand row justify-content-center" *ngIf="tokenService.isAdmin()">
+            <div class="btn btn-primary" (click)="addRule()">
                 <i class="fa fa-3x fa-plus pointer" title="Add Rule"></i>
             </div>
         </div>
