--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -14,8 +14,8 @@
 
 
         <!-- Insert new Spell -->
-        <div class="expand row justify-content-center">
-            <div class="btn btn-secondary" (click)="addSpell()">
+        <div class="expand row justify-content-center" *ngIf="this.tokenService.isAdmin()">
+            <div class="btn btn-primary" (click)="addSpell()">
                 <i class="fa fa-3x fa-plus pointer" title="Add Spell"></i>
             </div>
         </div>
