Minor mobile improvements

--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -16,12 +16,12 @@
             >
                
                 <!-- Article Name -->
-                <div class="col-md-3 col-4 text-center">
+                <div class="col-md-4 text-center">
                         <h5><strong>{{article.name}}</strong></h5>
                 </div>
                 
                 <!-- Article Text -->
-                <div class="col-md-9 col-8 font-size-16">
+                <div class="col-md-8 font-size-16">
                     {{article.description}}
                 </div>
             </a>
