Increased text for smaller devices on overview

--- a/src/app/components/articles/article-overview/article-overview.component.scss
+++ b/src/app/components/articles/article-overview/article-overview.component.scss
@@ -29,3 +29,9 @@
 #player-characters .card:hover > img{
     max-height: 20rem;
 }
+
+@media(max-width: 768px){
+    li{
+        font-size: larger;
+    }
+}
