--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,21 +112,10 @@ h2{
 }
 
 #bg:before {
-	-moz-transition: background-color 2.5s ease-in-out;
-	-webkit-transition: background-color 2.5s ease-in-out;
-	-ms-transition: background-color 2.5s ease-in-out;
-	transition: background-color 2.5s ease-in-out;
-	-moz-transition-delay: 0.75s;
-	-webkit-transition-delay: 0.75s;
-	-ms-transition-delay: 0.75s;
-	transition-delay: 0.75s;
 	background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../aldrunewiki/static/frontpage/images/overlay.png");
-	background-size: auto,
-256px 256px;
-	background-position: center,
-center;
-	background-repeat: no-repeat,
-repeat;
+	background-size: auto, 256px 256px;
+	background-position: center, center;
+	background-repeat: no-repeat, repeat;
 	z-index: -1;
 }
 
@@ -195,7 +184,6 @@ a:hover{
     padding: 2.5rem 2.5rem 5rem 2.5rem;
     color: white;
 	font-size: 18px;
-	transition: height 0.2s ease-in;
 }
 
 article{
