--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -47,7 +47,7 @@
             <div *ngIf="!diaryEntryView" class="expand row">
                 <div class="col-md-3 col-0"></div>
                 <div class="col-md-6 d-flex justify-content-around">
-                    <div class="btn btn-secondary" (click)="toggleEncounterCreateState(encounterIndex)">
+                    <div class="btn btn-primary" (click)="toggleEncounterCreateState(encounterIndex)">
                         <i class="fa fa-3x fa-plus pointer" title="Add Encounter to Diaryentry"></i>
                     </div>
                     <!-- insertExcisedEncounter has encounterIndex+1 because the insertion is supposed to happen AFTER this encounter, not before it -->
