Finished first attempt at config tables
This allows displaying, deleting and creating entire tables for configuration

--- a/src/app/components/articles/config-tables/config-tables.component.html
+++ b/src/app/components/articles/config-tables/config-tables.component.html
@@ -1,7 +1,7 @@
 <div class="main" #adminCard>
     <article *ngIf="true; else loading">
         <!-- Sections -->
-        <div *ngFor="let table of tables; let i = index" class="mb-3">
+        <div *ngFor="let table of tables; let tableIndex = index" class="mb-3">
             <!-- Section Heading -->
             <div class="d-flex justify-content-between">
                 <h3 class="mb-0"> 
@@ -12,21 +12,21 @@
                 <!-- Heading Buttons -->
                 <div class="align-self-end position-relative top1">
                     <!-- Add Users -->
-                    <div class="btn btn-dark border-white" (click)="createStateArray[i] = !createStateArray[i]">
+                    <div class="btn btn-dark border-white" (click)="createStateArray[tableIndex] = !createStateArray[tableIndex]">
                         <!-- Create Entry -->
-                        <span *ngIf="!createStateArray[i]">
+                        <span *ngIf="!createStateArray[tableIndex]">
                             <span class="fa fa-plus"></span>
                             Add {{ table.name }}
                         </span>
 
                         <!-- Cancel creating entry -->
-                        <span *ngIf="createStateArray[i]">
+                        <span *ngIf="createStateArray[tableIndex]">
                             <span class="fa fa-times"></span>
                             Cancel {{ table.name }} creation
                         </span>
                     </div>
 
-                    <div class="btn btn-primary border-white" (click)="loadTableEntries(i)">
+                    <div class="btn btn-primary border-white" (click)="loadTableEntries(tableIndex)">
                         <span class="fa fa-refresh"></span>
                         Load table data
                     </div>
@@ -38,18 +38,46 @@
 
             <!-- Section Body -->
 
-            <div *ngIf="!createStateArray[i]">
-                Here will be table records
+            <div *ngIf="!createStateArray[tableIndex]">
+                <div *ngIf="table.entries.length === 0"> Load entries to see them</div>
+
+                <div class="scroll-sideways">
+                    <!-- Table -->
+                    <table class="table table-dark" *ngIf="table.entries.length > 0">
+                        <!-- Talbe heading -->
+                        <thead>
+                            <tr>
+                            <th scope="col">#</th>
+                            <th scope="col" class="text-uppercase" *ngFor="let property of table.entries[0]|keyvalue">
+                                {{property.key}}
+                            </th>
+                            </tr>
+                        </thead>
+                        <!-- Table body -->
+                        <tbody>
+                            <tr *ngFor="let entry of table.entries; let entryIndex = index">
+                                <th scope="row">{{ entry.id }} {{entry.pk}}</th>
+                                <td *ngFor="let property of entry|keyvalue">{{property.value}}</td>
+                                <td>
+                                    <app-delete-toggle
+                                    (deleteEvent)="deleteTableEntry(tableIndex, entryIndex)"
+                                    ></app-delete-toggle>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
 
-            <div *ngIf="createStateArray[i]" class="my-2 card p-3">
+            <div *ngIf="createStateArray[tableIndex]" class="my-2 card p-3">
                 <h4>Adding new {{ table.name }}</h4>
                 <!-- Form -->
                 <app-formly-formcontainer 
                 [model]="table.model" 
                 [fields]="table.formFields" 
-                (submit)="createNewTableEntry(i)" 
-                (cancel)="createStateArray[i] = !createStateArray[i]"
+                (submit)="createNewTableEntry(tableIndex)" 
+                (cancel)="createStateArray[tableIndex] = !createStateArray[tableIndex]"
                 ></app-formly-formcontainer>
             </div>
         </div>
